bandaid on spacing issues for text input box

--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -19,6 +19,10 @@
  display: block;
 }
 
+.addPadding {
+ margin: 15px;
+}
+
 .example-box {
  padding: 20px 10px;
  border-bottom: solid 1px #ccc;
